# lawful-singletons

./: LICENSE  README.md  lawful-singletons.cabal
src/Data/Eq/Singletons/: Laws.hs
src/Data/Ord/Singletons/: Laws.hs
src/Data/Singletons/: Laws.hs
src/Data/Singletons/Base/Enum/: Laws.hs
